--- a/mygreet/Dockerfile
+++ b/mygreet/Dockerfile
@@ -2,14 +2,14 @@
 FROM alpine:3.10 as runtime
 
 RUN apk --no-cache --update add dumb-init
-EXPOSE 51051 52052
+EXPOSE 8080 52052
 
 WORKDIR /
 COPY ./docker-entrypoint.sh .
 COPY ./lbuild/server .
-COPY ./lbuild/client .
+# COPY ./lbuild/client .
 COPY ./config.yaml .
-COPY ssl/ ./ssl/
+# COPY ssl/ ./ssl/
 
 #RUN ls -altrh *.sh
 
