--- a/skaffold/getting-started/skaffold.yaml
+++ b/skaffold/getting-started/skaffold.yaml
@@ -1,9 +1,11 @@
 apiVersion: skaffold/v1
 kind: Config
+metadata:
+  name: getting-started
 build:
   artifacts:
   - image: ivostoy/skaffold-example
 deploy:
   kubectl:
     manifests:
-      - k8s-*
+    - k8s-pod.yaml
