--- a/myservice/config.yaml
+++ b/myservice/config.yaml
@@ -1,3 +1,6 @@
+# default myservice client configuration - using ambassador API gateway
+# use the default config.yaml for local tests
+
 grpcAddr: "0.0.0.0:52052"
 restAddr: "0.0.0.0:8080"
 
