--- a/myservice/client-config.yaml
+++ b/myservice/client-config.yaml
@@ -1,3 +1,6 @@
+# myservice client configuration - using ambassador API gateway
+# use the default config.yaml for local tests
+
 grpcAddr: "192.168.99.100:30506"
 restAddr: "192.168.99.100:30506"
 
