--- a/myservice/kustomize/base/xxx-alb-ingress.yaml
+++ b/myservice/kustomize/base/xxx-alb-ingress.yaml
@@ -1,7 +1,9 @@
+# not used - just for reference
+# shows how to deploy and use metadata for AWS ALB with auto DNS and TLS
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: boss-shield-ingress
+  name: myservice-ingress
   annotations:
     kubernetes.io/ingress.class: alb-public
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -13,7 +15,7 @@ metadata:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
     alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
   labels:
-    app: boss-shield-ingress
+    app: myservice
 
 spec:
   rules:
@@ -21,5 +23,5 @@ spec:
         paths:
           - path: /*
             backend:
-              serviceName: boss-shield-service
-              servicePort: 80
+              serviceName: myservice
+              servicePort: 8080
