--- a/myvault/config.yaml
+++ b/myvault/config.yaml
@@ -1,11 +1,8 @@
-# myservice client configuration - using ambassador API gateway
+# default myvault client configuration - using ambassador API gateway
 # use the default config.yaml for local tests
 
-#grpcAddr: "0.0.0.0:52052"
-#restAddr: "0.0.0.0:8080"
-
-grpcAddr: "192.168.99.100:30506"
-restAddr: "192.168.99.100:30506"
+grpcAddr: "0.0.0.0:52052"
+restAddr: "0.0.0.0:8080"
 
 # secure 0=no TLS, 1=server, 2=mTLS
 secure: 0
