--- a/myservice/Makefile
+++ b/myservice/Makefile
@@ -7,7 +7,7 @@ NAME := myservice
 # dockerhub
 DOCKER_REPO=ivostoy
 DAEMON=
-VERSION=0.12.4.2
+VERSION=0.12.4.4
 
 # Make does not offer a recursive wildcard function, so here's one:
 rwildcard=$(wildcard $1$2) $(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2))
@@ -165,7 +165,13 @@ dlogin: ## - docker ECR login
 .PHONY: kdep
 kdep: dbuild dpush ## - Kustomize and Deploy to k8s   kustomize edit set image $(IM)=$(IMG)
 	#cd $(BASE) && kustomize edit set image $(IM)=$(IMG) && kustomize build . && cd ..
-	cd $(BASE) && kustomize edit set image $(IM)=$(IMG) && kustomize build . | kubectl apply -f - && cd ..
+
+	#cd $(BASE) && kustomize edit set image $(IM)=$(IMG) && kustomize build . | kubectl apply -f - && cd ..
+
+	######### testing argo cd
+	cd $(BASE) && kustomize edit set image $(IM)=$(IMG) && kustomize build . && cd ..
+	#########
+
 	#kustomize build $(OVERLAYS)/test2
 	#kustomize build $(OVERLAYS)/test2 | kubectl apply -f -
 	sleep 1
