--- a/myservice/kustomize/base/kustomization.yaml
+++ b/myservice/kustomize/base/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
 images:
 - name: ivostoy/myservice
   newName: ivostoy/myservice
-  newTag: 0.12.4.5-832c98d
+  newTag: 0.12.4.5-31630ba-dirty
