--- a/nordic/Projects/dk-blink/platformio.ini
+++ b/nordic/Projects/dk-blink/platformio.ini
@@ -10,18 +10,9 @@
 ;
 ; /dev/tty.usbmodem0006835100281
 ;
-;[env:nrf52840_dk]
-;platform = nordicnrf52
-;framework = zephyr
-;board = nrf52840_dk
-;monitor_speed = 115200
-
-[env:thingy_52]
+[env:nrf52840_dk]
 platform = nordicnrf52
 framework = zephyr
-board = thingy_52
-upload_protocol = jlink
-; change microcontroller
-board_build.mcu = nrf52832
-; change MCU frequency
-board_build.f_cpu = 64000000L
+board = nrf52840_dk
+monitor_speed = 115200
+
