--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.DS_Store
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,6 +10,7 @@ build/
 .mvn
 
 **/.DS_Store
+java/demo/src/test/.DS_Store
 
 # Test binary, build with `go test -c`
 *.test
